--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -20,17 +20,17 @@
   justify-content: space-between;
 }
 
-.authroAndTime strong {
+.authorAndTime strong {
   display: block;
   font-size: 0.875rem;
   line-height: 1.6;
 }
 
-.authroAndTime time {
+.authorAndTime time {
   display: block;
   font-size: 0.75rem;
   line-height: 1.6;
-  color: var(--gray-600);
+  color: var(--gray-400);
 }
 
 .commentContent header button {
